# artifacts-rnd

./: .dockerignore  .env.example  Dockerfile  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  schema.sql
src/: artifact_repository.py  artifact_store.py  mcp_server.py  mcp_tool_host.py
tests/: conftest.py  test_api.py  test_artifact_repository.py  test_artifact_store.py  test_mcp_tool_host.py
